--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Advocate Name. All rights reserved.</p>
+        <p>&copy; 2024 Hiren Thakkar. All rights reserved.</p>
     </footer>
 
     <!-- <script src="script.js">   </script> -->
