--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="service.html">Service</a></li>
+                <li><a href="services.html">Service</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="location.html">location
                         <!-- <li><a href="https://maps.app.goo.gl/8SDkuPVyzZyXz92N9"></a></li></a></li> -->
